# Apis/Contabilidad/python-flask-server/swagger_server/models/nomina_contable.py
@@ -12,12 +12,14 @@ class NominaContable(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, id_nominda_contable: int=None, importe_nomina_contable: int=None, pago_nomina_contable_realizado: bool=None, id_departamento_contable: int=None, id_contable: int=None):
+    def __init__(self, id_nominda_contable: int=None, fecha_pago_nomina: str=None, importe_nomina_contable: int=None, pago_nomina_contable_realizado: bool=None, id_departamento_contable: int=None, id_contable: int=None):
         """
         NominaContable - a model defined in Swagger
 
         :param id_nominda_contable: The id_nominda_contable of this NominaContable.
         :type id_nominda_contable: int
+        :param fecha_pago_nomina: The fecha_pago_nomina of this NominaContable.
+        :type fecha_pago_nomina: str
         :param importe_nomina_contable: The importe_nomina_contable of this NominaContable.
         :type importe_nomina_contable: int
         :param pago_nomina_contable_realizado: The pago_nomina_contable_realizado of this NominaContable.
@@ -29,6 +31,7 @@ class NominaContable(Model):
         """
         self.swagger_types = {
             'id_nominda_contable': int,
+            'fecha_pago_nomina': str,
             'importe_nomina_contable': int,
             'pago_nomina_contable_realizado': bool,
             'id_departamento_contable': int,
@@ -37,6 +40,7 @@ class NominaContable(Model):
 
         self.attribute_map = {
             'id_nominda_contable': 'id_nomindaContable',
+            'fecha_pago_nomina': 'fechaPagoNomina',
             'importe_nomina_contable': 'importeNominaContable',
             'pago_nomina_contable_realizado': 'pagoNominaContableRealizado',
             'id_departamento_contable': 'id_departamentoContable',
@@ -44,6 +48,7 @@ class NominaContable(Model):
         }
 
         self._id_nominda_contable = id_nominda_contable
+        self._fecha_pago_nomina = fecha_pago_nomina
         self._importe_nomina_contable = importe_nomina_contable
         self._pago_nomina_contable_realizado = pago_nomina_contable_realizado
         self._id_departamento_contable = id_departamento_contable
@@ -81,6 +86,27 @@ class NominaContable(Model):
         """
 
         self._id_nominda_contable = id_nominda_contable
+
+    @property
+    def fecha_pago_nomina(self) -> str:
+        """
+        Gets the fecha_pago_nomina of this NominaContable.
+
+        :return: The fecha_pago_nomina of this NominaContable.
+        :rtype: str
+        """
+        return self._fecha_pago_nomina
+
+    @fecha_pago_nomina.setter
+    def fecha_pago_nomina(self, fecha_pago_nomina: str):
+        """
+        Sets the fecha_pago_nomina of this NominaContable.
+
+        :param fecha_pago_nomina: The fecha_pago_nomina of this NominaContable.
+        :type fecha_pago_nomina: str
+        """
+
+        self._fecha_pago_nomina = fecha_pago_nomina
 
     @property
     def importe_nomina_contable(self) -> int:
