# Apis/Contabilidad/python-flask-server/swagger_server/swagger/swagger.yaml
@@ -144,11 +144,12 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - name: "nominaContable"
-        in: "query"
-        description: "El salario que se va a añadir"
+      - in: "body"
+        name: "salario_contable"
+        description: "Se va añadir un nuevo salario de un contable"
         required: true
-        type: "integer"
+        schema:
+          $ref: "#/definitions/NominaContable"
       responses:
         200:
           description: "Nueva nomina introducido correctamente"
@@ -353,6 +354,8 @@ definitions:
     properties:
       id_nomindaContable:
         type: "integer"
+      fechaPagoNomina:
+        type: "string"
       importeNominaContable:
         type: "integer"
       pagoNominaContableRealizado:
